added search-near-me feature on search shops page
